Clarify distinction: NEO-BRUTALISM (not pure brutalism)
Major updates to emphasize neo-brutalism as distinct style:
- Updated homepage: brutalism + 90s web nostalgia fusion
- Clarified neo-brutalism = more colorful, structured, playful
- Added brutalism vs. neo-brutalism comparison table
- Updated timeline: emphasizes 90s web influence
- Modified characteristics to highlight bold colors, not just black/white
- Updated all footers to say 'NEO-BRUTALIST DIGITAL DESIGN'
- Revised README to explain neo-brutalist distinction
- Examples now include Figma, Gumroad (not just architectural)

Neo-brutalism ≠ Brutalism
Neo-brutalism = Architectural brutalism + 90s web + Modern UX

--- a/site/about.html
+++ b/site/about.html
@@ -31,7 +31,8 @@
         <section class="intro-section">
             <div class="content-box">
                 <h2>WHAT MAKES NEO-BRUTALISM AUTHENTIC?</h2>
-                <p>Neo-Brutalism is not about being accidentally ugly or poorly designed. It's a deliberate rejection of over-refinement in favor of raw honesty. Understanding the difference between authentic Brutalism and simply bad design is crucial.</p>
+                <p>Neo-Brutalism isn't just brutalism for the web—it's a distinct style that fuses architectural brutalism's raw honesty with 90s web design's bold simplicity and modern functionality. Understanding this blend is crucial.</p>
+                <p>Key distinction: Neo-brutalism is MORE colorful, MORE structured, and MORE nostalgic than pure brutalism. It's deliberately designed to look unpolished while being highly intentional.</p>
             </div>
         </section>
 
@@ -222,9 +223,52 @@
             </div>
         </section>
 
+                <section class="comparison-section">
+            <div class="comparison-box">
+                <h2>BRUTALISM VS. NEO-BRUTALISM</h2>
+                <div class="comparison-table">
+                    <div class="comparison-row comparison-header-row">
+                        <div class="comparison-cell">ASPECT</div>
+                        <div class="comparison-cell">BRUTALISM</div>
+                        <div class="comparison-cell">NEO-BRUTALISM</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell"><strong>Origins</strong></div>
+                        <div class="comparison-cell">1950s architecture</div>
+                        <div class="comparison-cell">2010s digital + 90s web</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell"><strong>Colors</strong></div>
+                        <div class="comparison-cell">Minimal (black/white/gray)</div>
+                        <div class="comparison-cell">Bold primaries, high contrast</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell"><strong>Aesthetic</strong></div>
+                        <div class="comparison-cell">Raw, unfinished, harsh</div>
+                        <div class="comparison-cell">Structured but raw, playful</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell"><strong>Layout</strong></div>
+                        <div class="comparison-cell">Plain HTML, minimal CSS</div>
+                        <div class="comparison-cell">Blocky, geometric, orderly</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell"><strong>Nostalgia</strong></div>
+                        <div class="comparison-cell">None (or 60s concrete)</div>
+                        <div class="comparison-cell">90s web, Windows 98 UI</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell"><strong>Examples</strong></div>
+                        <div class="comparison-cell">Craigslist, Drudge Report</div>
+                        <div class="comparison-cell">Figma, Gumroad, Balenciaga</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="comparison-section">
             <div class="comparison-box">
-                <h2>NEO-BRUTALISM VS. OTHER STYLES</h2>
+                <h2>NEO-BRUTALISM VS. SWISS DESIGN</h2>
                 <div class="comparison-table">
                     <div class="comparison-row comparison-header-row">
                         <div class="comparison-cell">ASPECT</div>
@@ -239,27 +283,27 @@
                     <div class="comparison-row">
                         <div class="comparison-cell"><strong>Spacing</strong></div>
                         <div class="comparison-cell">Generous white space</div>
-                        <div class="comparison-cell">Tight, packed</div>
+                        <div class="comparison-cell">Balanced (not too tight)</div>
                     </div>
                     <div class="comparison-row">
                         <div class="comparison-cell"><strong>Typography</strong></div>
                         <div class="comparison-cell">Refined hierarchy</div>
-                        <div class="comparison-cell">Abrupt contrast</div>
+                        <div class="comparison-cell">Bold, chunky contrast</div>
                     </div>
                     <div class="comparison-row">
                         <div class="comparison-cell"><strong>Borders</strong></div>
                         <div class="comparison-cell">Thin or absent</div>
-                        <div class="comparison-cell">Thick, black, dominant</div>
+                        <div class="comparison-cell">Thick (4-5px), dominant</div>
                     </div>
                     <div class="comparison-row">
                         <div class="comparison-cell"><strong>Shadows</strong></div>
                         <div class="comparison-cell">None or subtle</div>
-                        <div class="comparison-cell">Hard, offset</div>
+                        <div class="comparison-cell">Hard, offset, solid color</div>
                     </div>
                     <div class="comparison-row">
                         <div class="comparison-cell"><strong>Philosophy</strong></div>
                         <div class="comparison-cell">Perfection, clarity</div>
-                        <div class="comparison-cell">Honesty, rawness</div>
+                        <div class="comparison-cell">Boldness, honesty</div>
                     </div>
                 </div>
             </div>
@@ -409,7 +453,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>BUILT WITH AI COLLABORATION // 2025 // EMBRACING THE ROUGH EDGES</p>
+            <p>BUILT WITH AI COLLABORATION // 2025 // NEO-BRUTALIST DIGITAL DESIGN</p>
         </div>
     </footer>
 
