--- a/site/collaboration.html
+++ b/site/collaboration.html
@@ -324,7 +324,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>BUILT WITH AI COLLABORATION // 2025 // EMBRACING THE ROUGH EDGES</p>
+            <p>BUILT WITH AI COLLABORATION // 2025 // NEO-BRUTALIST DIGITAL DESIGN</p>
         </div>
     </footer>
 
