--- a/site/history.html
+++ b/site/history.html
@@ -22,8 +22,8 @@
 
     <header class="hero">
         <div class="hero-content">
-            <h1 class="hero-title">FROM CONCRETE TO CODE</h1>
-            <p class="hero-subtitle">THE EVOLUTION OF BRUTALIST DESIGN</p>
+            <h1 class="hero-title">FROM CONCRETE TO WEB</h1>
+            <p class="hero-subtitle">THE EVOLUTION FROM BRUTALISM TO NEO-BRUTALISM</p>
         </div>
     </header>
 
@@ -31,8 +31,8 @@
         <section class="intro-section">
             <div class="content-box">
                 <h2>A TIMELINE OF RAW AESTHETICS</h2>
-                <p>Neo-Brutalism in digital design didn't emerge from nowhere. It's rooted in a rich history of architectural rebellion, honest materials, and anti-establishment design philosophy that spans over 70 years.</p>
-                <p>From post-war concrete structures to modern digital interfaces, the Brutalist ethos has consistently challenged polished aesthetics and embraced raw functionality.</p>
+                <p>Neo-Brutalism didn't emerge from nowhere. It's rooted in architectural brutalism's honest materials (1950s) and early web design's bold simplicity (1990s). This fusion creates a unique digital aesthetic that's both nostalgic and contemporary.</p>
+                <p>From Le Corbusier's raw concrete to Pascal Deville's curated web collection, trace how brutalist philosophy evolved into today's neo-brutalist digital movement.</p>
             </div>
         </section>
 
@@ -102,53 +102,53 @@
 
                 <div class="timeline-era timeline-era-alt">
                     <div class="era-header">
-                        <h2>2010s: DIGITAL REVIVAL</h2>
-                        <span class="era-label">NEO-BRUTALISM EMERGES</span>
+                        <h2>2010s: DIGITAL NEO-BRUTALISM</h2>
+                        <span class="era-label">THE FUSION EMERGES</span>
                     </div>
                     <div class="era-content">
                         <div class="timeline-event">
                             <h3>2012-2014</h3>
-                            <h4>WEB DESIGN REACTION</h4>
-                            <p>Designers begin reacting against over-polished, skeuomorphic interfaces. Flat design emerges. Some push further—embracing deliberately rough, raw aesthetics inspired by Brutalist architecture.</p>
+                            <h4>REACTION TO FLAT DESIGN</h4>
+                            <p>Designers move beyond skeuomorphism to flat design, but some push further. Neo-brutalism emerges as designers combine brutalist honesty with 90s web nostalgia—thick borders, bright colors, blocky layouts.</p>
                         </div>
                         <div class="timeline-event">
                             <h3>2014</h3>
                             <h4>BRUTALIST ARCHITECTURE RENAISSANCE</h4>
-                            <p>Architectural appreciation grows. Books, exhibitions celebrate Brutalist buildings. Social media spreads awareness. The aesthetic finds new fans among younger generations.</p>
+                            <p>Architectural appreciation grows. Books, exhibitions celebrate Brutalist buildings. Social media spreads awareness. Younger generations rediscover brutalist aesthetics.</p>
                         </div>
                         <div class="timeline-event">
                             <h3>2016</h3>
                             <h4>BRUTALISTWEBSITES.COM LAUNCHES</h4>
-                            <p>Pascal Deville creates the definitive collection of Brutalist web design. Curates hundreds of sites embracing raw, honest, anti-corporate digital aesthetics. Neo-Brutalism becomes a recognized movement.</p>
+                            <p>Pascal Deville creates the definitive collection of brutalist/neo-brutalist web design. Curates hundreds of sites. The term "neo-brutalism" gains recognition as distinct from pure brutalism.</p>
                         </div>
                         <div class="timeline-event">
                             <h3>2016</h3>
                             <h4>WASHINGTON POST ELECTION COVERAGE</h4>
-                            <p>The newspaper's election site uses stark black/white/red palette, minimal decoration, raw data presentation. High-profile example of Brutalist design principles in mainstream media.</p>
+                            <p>The newspaper's election site uses stark black/white/red palette, minimal decoration, raw data. High-profile example of brutalist principles in mainstream media.</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="timeline-era">
                     <div class="era-header">
-                        <h2>2020s: MAINSTREAM ADOPTION</h2>
-                        <span class="era-label">CONTEMPORARY BRUTALISM</span>
+                        <h2>2020s: NEO-BRUTALISM MAINSTREAM</h2>
+                        <span class="era-label">BRANDS EMBRACE BOLD</span>
                     </div>
                     <div class="era-content">
                         <div class="timeline-event">
                             <h3>2020-PRESENT</h3>
-                            <h4>BRAND EXPERIMENTATION</h4>
-                            <p>High-fashion brands like Balenciaga embrace Brutalist web design. Tech companies experiment with raw aesthetics. Neo-Brutalism becomes a legitimate design language, not just rebellion.</p>
+                            <h4>BRAND ADOPTION</h4>
+                            <p>Major brands embrace neo-brutalism: Figma's bold rebrand, Gumroad's raw aesthetic, Balenciaga's digital presence. No longer just underground—neo-brutalism enters mainstream design.</p>
                         </div>
                         <div class="timeline-event">
                             <h3>2021-2023</h3>
                             <h4>DESIGN SYSTEM INTEGRATION</h4>
-                            <p>Brutalist elements appear in mainstream design systems: thick borders, hard shadows, stark colors. The style influences component libraries and UI frameworks.</p>
+                            <p>Neo-brutalist elements appear in component libraries: thick borders, hard shadows, bright colors. UI frameworks acknowledge the style as legitimate design language.</p>
                         </div>
                         <div class="timeline-event">
                             <h3>2025</h3>
-                            <h4>ONGOING EVOLUTION</h4>
-                            <p>Neo-Brutalism continues as a counter-aesthetic to over-designed interfaces. New designers discover the movement. The punk ethos persists—deliberately rough, anti-corporate, honest structure.</p>
+                            <h4>REFINED NEO-BRUTALISM</h4>
+                            <p>Style matures with UX best practices. Nielsen Norman Group publishes neo-brutalism guidelines. Designers balance boldness with usability, accessibility standards with raw aesthetics.</p>
                         </div>
                     </div>
                 </div>
@@ -216,7 +216,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>BUILT WITH AI COLLABORATION // 2025 // EMBRACING THE ROUGH EDGES</p>
+            <p>BUILT WITH AI COLLABORATION // 2025 // NEO-BRUTALIST DIGITAL DESIGN</p>
         </div>
     </footer>
 
