--- a/site/index.html
+++ b/site/index.html
@@ -23,9 +23,9 @@
     <header class="hero">
         <div class="hero-content">
             <h1 class="hero-title">NEO-BRUTALISM</h1>
-            <p class="hero-subtitle">RAW. HONEST. ANTI-CORPORATE.</p>
+            <p class="hero-subtitle">DIGITAL BRUTALISM + 90S WEB NOSTALGIA</p>
             <div class="hero-box">
-                <p>DIGITAL DESIGN THAT REJECTS POLISH AND EMBRACES THE ROUGH EDGES OF TRUTH</p>
+                <p>A BOLD DESIGN MOVEMENT THAT COMBINES RAW ARCHITECTURAL BRUTALISM WITH PLAYFUL WEB 1.0 AESTHETICS</p>
             </div>
         </div>
     </header>
@@ -34,9 +34,9 @@
         <section class="intro-section">
             <div class="content-box">
                 <h2>WHAT IS NEO-BRUTALISM?</h2>
-                <p>Neo-Brutalism is a digital design movement inspired by Brutalist architecture from the 1950s-1970s. It strips away corporate polish to reveal raw, honest structure.</p>
-                <p>This style deliberately rejects refinement. Thick borders. Harsh angles. System fonts. High contrast. No smooth transitions. No subtle shadows.</p>
-                <p>If it looks "too nice," it's not Brutalist enough.</p>
+                <p>Neo-Brutalism is a digital design movement that fuses Brutalist architecture (1950s-1970s raw concrete aesthetics) with nostalgic 90s web design. Unlike pure brutalism, neo-brutalism is more colorful, structured, and playful.</p>
+                <p>Think: thick borders + bright colors + hard shadows + retro web elements + bold typography. It's deliberately unpolished but intentionally designed—not accidentally ugly.</p>
+                <p>Neo-Brutalism = Architectural honesty + Web 1.0 nostalgia + Contemporary boldness</p>
             </div>
         </section>
 
@@ -44,80 +44,80 @@
             <div class="manifesto-grid">
                 <div class="manifesto-item">
                     <h3>01</h3>
-                    <h4>TRUTH TO MATERIALS</h4>
-                    <p>Show what things really are. Don't hide the structure. Expose the grid. Make the bones visible.</p>
+                    <h4>BRUTALIST FOUNDATION</h4>
+                    <p>Inspired by architectural brutalism: exposed structure, honest materials, visible grids. Show the bones.</p>
                 </div>
                 <div class="manifesto-item">
                     <h3>02</h3>
-                    <h4>ANTI-CORPORATE</h4>
-                    <p>Deliberately rough. Purposefully unrefined. A rejection of sleek, over-polished corporate design.</p>
+                    <h4>90S WEB NOSTALGIA</h4>
+                    <p>Retro elements from early internet: bold borders, blocky layouts, Web 1.0 simplicity with modern polish.</p>
                 </div>
                 <div class="manifesto-item">
                     <h3>03</h3>
-                    <h4>FUNCTIONAL MINIMALISM</h4>
-                    <p>Only what's needed. Nothing decorative. Pure function without unnecessary embellishment.</p>
+                    <h4>BOLD & COLORFUL</h4>
+                    <p>Unlike gray brutalist architecture, neo-brutalism embraces bright colors, high contrast, visual impact.</p>
                 </div>
                 <div class="manifesto-item">
                     <h3>04</h3>
-                    <h4>RAW AESTHETICS</h4>
-                    <p>Thick borders. Harsh shadows. Sharp corners. Stark colors. Tight spacing. Abrupt state changes.</p>
+                    <h4>INTENTIONALLY RAW</h4>
+                    <p>Deliberately unpolished but carefully designed. Not accidentally ugly—strategically bold and functional.</p>
                 </div>
             </div>
         </section>
 
         <section class="characteristics-section">
-            <h2>DESIGN CHARACTERISTICS</h2>
+            <h2>NEO-BRUTALIST CHARACTERISTICS</h2>
             <div class="char-grid">
                 <div class="char-box char-box-black">
                     <h3>COLOR</h3>
-                    <p>BLACK & WHITE DOMINATE</p>
-                    <p>BRIGHT ACCENTS SPARINGLY</p>
-                    <p>NO GRADIENTS</p>
-                    <p>HIGH CONTRAST ALWAYS</p>
+                    <p>BRIGHT PRIMARY COLORS</p>
+                    <p>HIGH CONTRAST COMBOS</p>
+                    <p>MORE COLORFUL THAN BRUTALISM</p>
+                    <p>BOLD NOT SUBTLE</p>
                 </div>
                 <div class="char-box char-box-yellow">
                     <h3>TYPOGRAPHY</h3>
-                    <p>SYSTEM FONTS ONLY</p>
-                    <p>ALL CAPS FOR EMPHASIS</p>
-                    <p>TIGHT LINE-HEIGHT</p>
-                    <p>HUGE SIZE CONTRAST</p>
+                    <p>BOLD & CHUNKY FONTS</p>
+                    <p>ALL CAPS FOR IMPACT</p>
+                    <p>QUIRKY TYPEFACES OK</p>
+                    <p>SIZE = HIERARCHY</p>
                 </div>
                 <div class="char-box char-box-white">
                     <h3>LAYOUT</h3>
                     <p>THICK BORDERS (4-5PX)</p>
-                    <p>90° ANGLES ONLY</p>
-                    <p>VISIBLE GRID</p>
-                    <p>BOXED SECTIONS</p>
+                    <p>BLOCKY GEOMETRIC SHAPES</p>
+                    <p>STRUCTURED BUT RAW</p>
+                    <p>90S WEB VIBES</p>
                 </div>
                 <div class="char-box char-box-black">
-                    <h3>SPACING</h3>
-                    <p>TIGHT & PACKED</p>
-                    <p>MINIMAL PADDING</p>
-                    <p>INTENTIONAL CRAMPING</p>
-                    <p>CREATE TENSION</p>
+                    <h3>SHADOWS</h3>
+                    <p>HARD DROP SHADOWS</p>
+                    <p>SOLID SINGLE COLOR</p>
+                    <p>4-8PX OFFSET</p>
+                    <p>NO BLUR/GRADIENT</p>
                 </div>
             </div>
         </section>
 
         <section class="timeline-preview">
             <div class="timeline-box">
-                <h2>FROM CONCRETE TO CODE</h2>
+                <h2>FROM ARCHITECTURE TO WEB DESIGN</h2>
                 <div class="timeline-items">
                     <div class="timeline-item">
                         <span class="year">1950s-70s</span>
-                        <p>Brutalist architecture emerges: raw concrete, exposed structure, honest materials</p>
+                        <p>Brutalist architecture: raw concrete, exposed structure, honest materials (Le Corbusier)</p>
+                    </div>
+                    <div class="timeline-item">
+                        <span class="year">1995-2000</span>
+                        <p>Early web design: bold borders, blocky layouts, bright colors, simple HTML aesthetics</p>
                     </div>
                     <div class="timeline-item">
                         <span class="year">2010s</span>
-                        <p>Digital revival begins as reaction against corporate polish and over-designed interfaces</p>
+                        <p>Digital designers react against over-polished interfaces, revive brutalist + 90s aesthetics</p>
                     </div>
                     <div class="timeline-item">
-                        <span class="year">2016</span>
-                        <p>Pascal Deville launches BrutalistWebsites.com, curating the movement</p>
-                    </div>
-                    <div class="timeline-item">
-                        <span class="year">TODAY</span>
-                        <p>Neo-Brutalism continues as punk design ethos: deliberately rough, anti-establishment</p>
+                        <span class="year">2016-NOW</span>
+                        <p>Neo-Brutalism emerges as recognized style: brands like Figma, Gumroad embrace bold, raw design</p>
                     </div>
                 </div>
                 <a href="history.html" class="brutal-button">FULL TIMELINE</a>
@@ -158,7 +158,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>BUILT WITH AI COLLABORATION // 2025 // EMBRACING THE ROUGH EDGES</p>
+            <p>BUILT WITH AI COLLABORATION // 2025 // NEO-BRUTALIST DIGITAL DESIGN</p>
         </div>
     </footer>
 </body>
