--- a/site/designers.html
+++ b/site/designers.html
@@ -282,80 +282,139 @@
 
     <style>
         .designers-section {
-            margin: 64px 0;
+            margin: 80px 0;
             display: flex;
             flex-direction: column;
-            gap: 48px;
+            gap: 64px;
         }
 
         .designer-card {
-            border: 5px solid #000000;
+            border: 10px solid #000000;
             background-color: #FFFFFF;
+            box-shadow: 16px 16px 0 #FF69B4;
+        }
+
+        .designer-card:nth-child(2) {
+            box-shadow: 16px 16px 0 #00BFFF;
+        }
+
+        .designer-card:nth-child(3) {
+            box-shadow: 16px 16px 0 #00FF7F;
+        }
+
+        .designer-card:nth-child(4) {
+            box-shadow: 16px 16px 0 #FFFF00;
+        }
+
+        .designer-card:nth-child(5) {
+            box-shadow: 16px 16px 0 #FF69B4;
+        }
+
+        .designer-card:nth-child(6) {
+            box-shadow: 16px 16px 0 #00BFFF;
+        }
+
+        .designer-card:nth-child(7) {
+            box-shadow: 16px 16px 0 #00FF7F;
         }
 
         .designer-card-alt {
-            background-color: #000000;
+            background: linear-gradient(135deg, #FF69B4 0%, #00BFFF 100%);
             color: #FFFFFF;
         }
 
         .designer-header {
             background-color: #FFFF00;
             color: #000000;
-            padding: 24px 32px;
-            border-bottom: 5px solid #000000;
+            padding: 32px 48px;
+            border-bottom: 8px solid #000000;
+        }
+
+        .designer-card:nth-child(2) .designer-header {
+            background-color: #00BFFF;
+            color: #FFFFFF;
+        }
+
+        .designer-card:nth-child(3) .designer-header {
+            background-color: #00FF7F;
+        }
+
+        .designer-card:nth-child(5) .designer-header {
+            background-color: #FF69B4;
+            color: #FFFFFF;
+        }
+
+        .designer-card:nth-child(7) .designer-header {
+            background-color: #00BFFF;
+            color: #FFFFFF;
         }
 
         .designer-header h2 {
-            margin: 0 0 8px 0;
-            font-size: 36px;
+            margin: 0 0 12px 0;
+            font-size: 48px;
+            text-shadow: 4px 4px 0 #000000;
         }
 
         .designer-era {
-            font-size: 14px;
-            font-weight: bold;
+            font-size: 16px;
+            font-weight: 900;
+            background-color: #000000;
+            color: #FFFFFF;
+            padding: 8px 16px;
+            display: inline-block;
+            border: 4px solid #000000;
         }
 
         .designer-content {
-            padding: 32px;
+            padding: 48px;
         }
 
         .designer-bio {
-            margin-bottom: 32px;
-            padding-bottom: 24px;
-            border-bottom: 3px solid #000000;
+            margin-bottom: 40px;
+            padding-bottom: 32px;
+            border-bottom: 6px solid #000000;
         }
 
         .designer-card-alt .designer-bio {
-            border-bottom-color: #FFFF00;
+            border-bottom-color: #FFFFFF;
         }
 
         .designer-bio h3 {
-            font-size: 24px;
-            margin-bottom: 16px;
+            font-size: 28px;
+            margin-bottom: 20px;
             color: #000000;
             background-color: #FFFF00;
             display: inline-block;
-            padding: 8px 16px;
-            border: 3px solid #000000;
+            padding: 12px 24px;
+            border: 5px solid #000000;
+            box-shadow: 6px 6px 0 #FF69B4;
+        }
+
+        .designer-card-alt .designer-bio h3 {
+            color: #000000;
+            background-color: #FFFFFF;
+            box-shadow: 6px 6px 0 #000000;
         }
 
         .designer-bio p {
-            font-size: 16px;
-            line-height: 1.4;
-            margin-bottom: 12px;
+            font-size: 18px;
+            line-height: 1.6;
+            margin-bottom: 16px;
         }
 
         .designer-bio strong {
-            font-weight: bold;
+            font-weight: 900;
         }
 
         .designer-works {
-            margin-bottom: 24px;
+            margin-bottom: 32px;
         }
 
         .designer-works h4 {
-            font-size: 18px;
-            margin-bottom: 12px;
+            font-size: 22px;
+            margin-bottom: 16px;
+            border-bottom: 4px solid #FF69B4;
+            padding-bottom: 8px;
         }
 
         .designer-works ul {
@@ -364,26 +423,43 @@
         }
 
         .designer-works li {
-            padding: 8px 0;
-            padding-left: 24px;
-            border-left: 4px solid #FFFF00;
-            margin-bottom: 8px;
-            font-size: 14px;
+            padding: 12px 16px;
+            padding-left: 32px;
+            border-left: 8px solid #FFFF00;
+            margin-bottom: 12px;
+            font-size: 16px;
+            background-color: #FFFF00;
+            color: #000000;
+        }
+
+        .designer-card:nth-child(2) .designer-works li {
+            border-left-color: #00BFFF;
+            background-color: transparent;
+        }
+
+        .designer-card:nth-child(3) .designer-works li {
+            border-left-color: #00FF7F;
+            background-color: transparent;
         }
 
         .designer-card-alt .designer-works li {
-            border-left-color: #FFFF00;
+            border-left-color: #FFFFFF;
+            background-color: #000000;
+            color: #FFFFFF;
         }
 
         .designer-impact h4 {
-            font-size: 18px;
-            margin-bottom: 12px;
+            font-size: 22px;
+            margin-bottom: 16px;
+            border-bottom: 4px solid #00BFFF;
+            padding-bottom: 8px;
         }
 
         .designer-impact p {
-            font-size: 16px;
-            line-height: 1.4;
+            font-size: 18px;
+            line-height: 1.6;
             font-style: italic;
+            font-weight: bold;
         }
 
         .connections-section {
@@ -391,53 +467,88 @@
         }
 
         .connections-box {
-            background-color: #000000;
-            border: 8px solid #FFFF00;
-            padding: 48px;
+            background: linear-gradient(135deg, #00BFFF 0%, #00FF7F 100%);
+            border: 12px solid #000000;
+            padding: 64px;
+            box-shadow: 20px 20px 0 #FFFF00;
         }
 
         .connections-box h2 {
-            color: #FFFF00;
+            color: #FFFFFF;
             text-align: center;
-            margin-bottom: 48px;
+            margin-bottom: 64px;
+            font-size: 64px;
+            text-shadow: 6px 6px 0 #000000;
         }
 
         .threads-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 24px;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 32px;
         }
 
         .thread-item {
             background-color: #FFFFFF;
-            border: 4px solid #FFFF00;
-            padding: 24px;
+            border: 6px solid #000000;
+            padding: 32px;
+            box-shadow: 10px 10px 0 #FF69B4;
+        }
+
+        .thread-item:nth-child(2) {
+            box-shadow: 10px 10px 0 #FFFF00;
+        }
+
+        .thread-item:nth-child(3) {
+            box-shadow: 10px 10px 0 #00BFFF;
+        }
+
+        .thread-item:nth-child(4) {
+            box-shadow: 10px 10px 0 #00FF7F;
         }
 
         .thread-item h3 {
             color: #000000;
-            font-size: 24px;
-            margin-bottom: 12px;
+            font-size: 28px;
+            margin-bottom: 16px;
+            border-bottom: 4px solid #FF69B4;
+            padding-bottom: 12px;
         }
 
         .thread-item p {
             color: #000000;
-            font-size: 14px;
-            line-height: 1.4;
+            font-size: 16px;
+            line-height: 1.5;
             margin: 0;
         }
 
         @media (max-width: 768px) {
+            .designers-section {
+                gap: 48px;
+            }
+
+            .designer-card {
+                box-shadow: 10px 10px 0 #FF69B4;
+            }
+
+            .designer-header {
+                padding: 24px 32px;
+            }
+
             .designer-header h2 {
-                font-size: 28px;
+                font-size: 32px;
             }
 
             .designer-content {
-                padding: 24px;
+                padding: 32px;
             }
 
             .connections-box {
-                padding: 24px;
+                padding: 32px;
+                box-shadow: 12px 12px 0 #FFFF00;
+            }
+
+            .connections-box h2 {
+                font-size: 40px;
             }
         }
     </style>
