--- a/site/history.html
+++ b/site/history.html
@@ -228,24 +228,41 @@
         .timeline-detailed {
             display: flex;
             flex-direction: column;
-            gap: 48px;
+            gap: 64px;
         }
 
         .timeline-era {
-            border: 5px solid #000000;
+            border: 10px solid #000000;
             background-color: #FFFFFF;
+            box-shadow: 16px 16px 0 #FF69B4;
+        }
+
+        .timeline-era:nth-child(2) {
+            box-shadow: 16px 16px 0 #00BFFF;
+        }
+
+        .timeline-era:nth-child(3) {
+            box-shadow: 16px 16px 0 #00FF7F;
+        }
+
+        .timeline-era:nth-child(4) {
+            box-shadow: 16px 16px 0 #FFFF00;
+        }
+
+        .timeline-era:nth-child(5) {
+            box-shadow: 16px 16px 0 #FF4444;
         }
 
         .timeline-era-alt {
-            background-color: #000000;
+            background: linear-gradient(135deg, #FF69B4 0%, #00BFFF 100%);
             color: #FFFFFF;
         }
 
         .era-header {
             background-color: #FFFF00;
             color: #000000;
-            padding: 24px 32px;
-            border-bottom: 5px solid #000000;
+            padding: 32px 48px;
+            border-bottom: 8px solid #000000;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -254,35 +271,48 @@
         }
 
         .timeline-era-alt .era-header {
-            border-bottom-color: #FFFF00;
+            background-color: #00BFFF;
+            color: #FFFFFF;
+            border-bottom-color: #000000;
+        }
+
+        .timeline-era:nth-child(3) .era-header {
+            background-color: #00FF7F;
+        }
+
+        .timeline-era:nth-child(5) .era-header {
+            background-color: #FF69B4;
+            color: #FFFFFF;
         }
 
         .era-header h2 {
             margin: 0;
-            font-size: 36px;
+            font-size: 48px;
+            text-shadow: 4px 4px 0 #000000;
         }
 
         .era-label {
-            font-size: 14px;
-            font-weight: bold;
-            padding: 8px 16px;
+            font-size: 16px;
+            font-weight: 900;
+            padding: 12px 24px;
             background-color: #000000;
-            color: #FFFF00;
-            border: 3px solid #000000;
+            color: #FFFFFF;
+            border: 4px solid #000000;
+            box-shadow: 4px 4px 0 #FF69B4;
         }
 
         .era-content {
-            padding: 32px;
+            padding: 48px;
         }
 
         .timeline-event {
-            margin-bottom: 32px;
-            padding-bottom: 32px;
-            border-bottom: 3px solid #000000;
+            margin-bottom: 40px;
+            padding-bottom: 40px;
+            border-bottom: 6px solid #000000;
         }
 
         .timeline-era-alt .timeline-event {
-            border-bottom-color: #FFFF00;
+            border-bottom-color: #FFFFFF;
         }
 
         .timeline-event:last-child {
@@ -295,24 +325,31 @@
             color: #000000;
             background-color: #FFFF00;
             display: inline-block;
-            padding: 8px 16px;
-            margin-bottom: 12px;
-            border: 3px solid #000000;
+            padding: 12px 24px;
+            margin-bottom: 16px;
+            border: 5px solid #000000;
+            box-shadow: 6px 6px 0 #FF69B4;
+            font-size: 32px;
         }
 
         .timeline-era-alt .timeline-event h3 {
             color: #000000;
-            background-color: #FFFF00;
+            background-color: #FFFFFF;
+            box-shadow: 6px 6px 0 #000000;
         }
 
         .timeline-event h4 {
-            font-size: 24px;
-            margin-bottom: 12px;
+            font-size: 28px;
+            margin-bottom: 16px;
         }
 
         .timeline-event p {
-            font-size: 16px;
-            line-height: 1.4;
+            font-size: 18px;
+            line-height: 1.6;
+        }
+
+        .timeline-era-alt .timeline-event p {
+            color: #FFFFFF;
         }
 
         .philosophy-section {
@@ -320,66 +357,99 @@
         }
 
         .philosophy-box {
-            background-color: #000000;
-            border: 8px solid #FFFF00;
-            padding: 48px;
+            background: linear-gradient(135deg, #00BFFF 0%, #00FF7F 100%);
+            border: 12px solid #000000;
+            padding: 64px;
+            box-shadow: 20px 20px 0 #FFFF00;
         }
 
         .philosophy-box h2 {
-            color: #FFFF00;
+            color: #FFFFFF;
             text-align: center;
-            margin-bottom: 48px;
+            margin-bottom: 64px;
+            font-size: 64px;
+            text-shadow: 6px 6px 0 #000000;
         }
 
         .principles-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 24px;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 32px;
         }
 
         .principle-item {
             background-color: #FFFFFF;
-            border: 4px solid #FFFF00;
-            padding: 24px;
+            border: 6px solid #000000;
+            padding: 32px;
+            box-shadow: 10px 10px 0 #FF69B4;
+        }
+
+        .principle-item:nth-child(2) {
+            box-shadow: 10px 10px 0 #FFFF00;
+        }
+
+        .principle-item:nth-child(3) {
+            box-shadow: 10px 10px 0 #00BFFF;
+        }
+
+        .principle-item:nth-child(4) {
+            box-shadow: 10px 10px 0 #00FF7F;
         }
 
         .principle-item h3 {
             color: #000000;
-            font-size: 20px;
-            margin-bottom: 16px;
+            font-size: 24px;
+            margin-bottom: 24px;
+            border-bottom: 4px solid #FF69B4;
+            padding-bottom: 12px;
         }
 
         .principle-item p {
             color: #000000;
-            font-size: 14px;
-            margin-bottom: 12px;
-            line-height: 1.3;
+            font-size: 16px;
+            margin-bottom: 16px;
+            line-height: 1.5;
         }
 
         @media (max-width: 768px) {
+            .timeline-detailed {
+                gap: 48px;
+            }
+
+            .timeline-era {
+                box-shadow: 10px 10px 0 #FF69B4;
+            }
+
             .era-header {
                 flex-direction: column;
                 align-items: flex-start;
+                padding: 24px 32px;
             }
 
             .era-header h2 {
-                font-size: 28px;
+                font-size: 32px;
             }
 
             .era-content {
-                padding: 24px;
+                padding: 32px;
             }
 
             .timeline-event h3 {
-                font-size: 20px;
+                font-size: 24px;
+                padding: 8px 16px;
             }
 
             .timeline-event h4 {
-                font-size: 20px;
+                font-size: 22px;
             }
 
             .philosophy-box {
-                padding: 24px;
+                padding: 32px;
+                box-shadow: 12px 12px 0 #FFFF00;
+            }
+
+            .philosophy-box h2 {
+                font-size: 40px;
             }
         }
     </style>
