Fix text contrast issues for readability
Technical debt cleanup:
- Changed .brutal-button from white to black text (pink bg)
- Changed button hover from blue to yellow bg with black text
- Fixed manifesto cards #2, #3, #4 to use black text on pink/blue/green
- Fixed collaboration.html table: pink and blue cells now use black text
- Fixed history.html era headers: blue and pink backgrounds now use black text
- Fixed designers.html headers: blue and pink backgrounds now use black text
- Fixed about.html comparison header: gradient now uses black text
- All text-shadows verified to use 0 blur (hard shadows only)
- No white-on-yellow or light-on-light combinations remain

All changes improve WCAG contrast ratios while maintaining neo-brutalist aesthetic.

--- a/site/about.html
+++ b/site/about.html
@@ -693,7 +693,7 @@
 
         .comparison-header-row {
             background: linear-gradient(135deg, #FF69B4 0%, #00BFFF 100%);
-            color: #FFFFFF;
+            color: #000000;
         }
 
         .comparison-header-row .comparison-cell {
