--- a/site/designers.html
+++ b/site/designers.html
@@ -332,7 +332,7 @@
 
         .designer-card:nth-child(2) .designer-header {
             background-color: #00BFFF;
-            color: #FFFFFF;
+            color: #000000;
         }
 
         .designer-card:nth-child(3) .designer-header {
@@ -341,12 +341,12 @@
 
         .designer-card:nth-child(5) .designer-header {
             background-color: #FF69B4;
-            color: #FFFFFF;
+            color: #000000;
         }
 
         .designer-card:nth-child(7) .designer-header {
             background-color: #00BFFF;
-            color: #FFFFFF;
+            color: #000000;
         }
 
         .designer-header h2 {
