--- a/site/history.html
+++ b/site/history.html
@@ -272,7 +272,7 @@
 
         .timeline-era-alt .era-header {
             background-color: #00BFFF;
-            color: #FFFFFF;
+            color: #000000;
             border-bottom-color: #000000;
         }
 
@@ -282,7 +282,7 @@
 
         .timeline-era:nth-child(5) .era-header {
             background-color: #FF69B4;
-            color: #FFFFFF;
+            color: #000000;
         }
 
         .era-header h2 {
