--- a/site/collaboration.html
+++ b/site/collaboration.html
@@ -616,14 +616,14 @@
         .decisions-table tbody tr:nth-child(3) td:first-child,
         .decisions-table tbody tr:nth-child(4) td:first-child {
             background-color: #FF69B4;
-            color: #FFFFFF;
+            color: #000000;
             font-weight: 900;
         }
 
         .decisions-table tbody tr:nth-child(5) td:first-child,
         .decisions-table tbody tr:nth-child(6) td:first-child {
             background-color: #00BFFF;
-            color: #FFFFFF;
+            color: #000000;
             font-weight: 900;
         }
 
