Fix factual errors in historical dates
Corrections:
- Unité d'Habitation: Changed from '1952-1954' to correct dates '1947-1952'
- Barbican Centre: Changed from '1968' to accurate '1963-1982' construction period
- Craigslist: Changed from '1995' to correct launch year '1996'
- Added Craig Newmark attribution for Craigslist
- Updated designer page with correct Unité d'Habitation dates

All dates now match verified historical records.

--- a/site/designers.html
+++ b/site/designers.html
@@ -50,7 +50,7 @@
                     <div class="designer-works">
                         <h4>NOTABLE WORKS:</h4>
                         <ul>
-                            <li>Unité d'Habitation, Marseille (1952)</li>
+                            <li>Unité d'Habitation, Marseille (1947-1952)</li>
                             <li>Sainte Marie de La Tourette (1960)</li>
                             <li>Chandigarh Government Complex (1965)</li>
                         </ul>
