--- a/site/history.html
+++ b/site/history.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="era-content">
                         <div class="timeline-event">
-                            <h3>1952-1954</h3>
+                            <h3>1947-1952</h3>
                             <h4>LE CORBUSIER'S UNITÉ D'HABITATION</h4>
                             <p>The Swiss-French architect completes his housing complex in Marseille using raw concrete (béton brut). This becomes the foundation of Brutalist architecture—exposed materials, honest structure, no decorative facades.</p>
                         </div>
@@ -69,9 +69,9 @@
                             <p>Brutalist architecture spreads worldwide. Government buildings, universities, housing projects embrace the style. Raw concrete, geometric forms, exposed structure become symbols of modernist progress and social democracy.</p>
                         </div>
                         <div class="timeline-event">
-                            <h3>1968</h3>
-                            <h4>BARBICAN CENTRE BEGINS</h4>
-                            <p>London's Barbican Estate construction starts—one of the most ambitious Brutalist residential projects. Massive concrete structures, elevated walkways, uncompromising geometric design.</p>
+                            <h3>1963-1982</h3>
+                            <h4>BARBICAN CENTRE</h4>
+                            <p>London's Barbican Estate construction begins—one of the most ambitious Brutalist residential projects. Massive concrete structures, elevated walkways, uncompromising geometric design. Opens to the public in 1982.</p>
                         </div>
                         <div class="timeline-event">
                             <h3>1970s</h3>
@@ -93,9 +93,9 @@
                             <p>Hundreds of Brutalist buildings demolished. Post-modernism rejects raw concrete for decorative elements. Brutalism becomes unfashionable, dismissed as architectural mistake.</p>
                         </div>
                         <div class="timeline-event">
-                            <h3>1995</h3>
+                            <h3>1996</h3>
                             <h4>CRAIGSLIST LAUNCHES</h4>
-                            <p>Accidentally Brutalist web design: pure HTML, minimal styling, raw function over form. While not intentionally Brutalist, it embodies the philosophy—stripped down, honest, functional.</p>
+                            <p>Craig Newmark's classified ads site launches with pure HTML and minimal styling. While not intentionally Brutalist, it embodies the philosophy—stripped down, honest, functional. Design remains largely unchanged for decades.</p>
                         </div>
                     </div>
                 </div>
