Fix yellow background readability: Ensure all text is explicitly black
- Added explicit 'color: #000000' to .future-box h2 (collaboration page)
- Added explicit 'color: #000000' to .resources-box h2 (about page)
- Added explicit 'color: #000000' to .future-item h4 (collaboration page)
- Added explicit 'color: #000000' to .phase-content h4 (collaboration page)

All yellow backgrounds now guaranteed to have black text for maximum readability.
Fixes white/light text appearing on yellow backgrounds.

--- a/site/collaboration.html
+++ b/site/collaboration.html
@@ -406,6 +406,7 @@
         }
 
         .phase-content h4 {
+            color: #000000;
             font-size: 28px;
             margin: 32px 0 16px 0;
             font-weight: 900;
@@ -645,6 +646,7 @@
         }
 
         .future-box h2 {
+            color: #000000;
             text-align: center;
             margin-bottom: 64px;
             font-size: 64px;
@@ -678,6 +680,7 @@
         }
 
         .future-item h4 {
+            color: #000000;
             font-size: 22px;
             margin-bottom: 16px;
             font-weight: 900;
