--- a/site/about.html
+++ b/site/about.html
@@ -901,6 +901,7 @@
         }
 
         .resources-box h2 {
+            color: #000000;
             text-align: center;
             margin-bottom: 64px;
             font-size: 64px;
