--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="main-nav">
         <div class="nav-container">
-            <div class="logo">BRUTALISM</div>
+            <div class="logo">NEO-BRUTALISM</div>
             <ul class="nav-links">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="history.html">HISTORY</a></li>
