--- a/designers.html
+++ b/designers.html
@@ -483,7 +483,7 @@
 
         .threads-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 32px;
         }
 
