--- a/site/about.html
+++ b/site/about.html
@@ -478,7 +478,7 @@
 
         .philosophy-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 40px;
             max-width: 1400px;
             margin: 0 auto;
@@ -735,7 +735,7 @@
 
         .mistakes-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 32px;
         }
 
@@ -811,7 +811,7 @@
 
         .ux-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 32px;
             margin-bottom: 48px;
         }
@@ -910,7 +910,7 @@
 
         .resources-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 40px;
         }
 
