--- a/site/history.html
+++ b/site/history.html
@@ -373,7 +373,7 @@
 
         .principles-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 32px;
         }
 
