--- a/history.html
+++ b/history.html
@@ -412,6 +412,10 @@
         }
 
         @media (max-width: 768px) {
+            .principles-grid {
+                grid-template-columns: 1fr;
+            }
+            
             .timeline-detailed {
                 gap: 48px;
             }
