--- a/site/collaboration.html
+++ b/site/collaboration.html
@@ -733,6 +733,14 @@
         }
 
         @media (max-width: 768px) {
+            .reflection-grid {
+                grid-template-columns: 1fr;
+            }
+            
+            .future-items {
+                grid-template-columns: 1fr;
+            }
+            
             .process-section > h2,
             .challenges-section > h2,
             .reflections-box h2,
