--- a/site/designers.html
+++ b/site/designers.html
@@ -522,6 +522,10 @@
         }
 
         @media (max-width: 768px) {
+            .threads-grid {
+                grid-template-columns: 1fr;
+            }
+            
             .designers-section {
                 gap: 48px;
             }
